--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -68,6 +68,7 @@ body {
   font-size: var(--normal-font-size);
   background-color: var(--body-color);
   color: var(--text-color);
+  transition: background-color .4s; 
 }
 
 h1, h2, h3, h4 {
@@ -90,15 +91,82 @@ img {
 }
 
 /*=============== THEME ===============*/
+.nav__buttons{
+  display: flex;
+  align-items: center;
+  column-gap: 1rem;
+}
 
+.change-theme{
+  font-size: 1.25rem;
+  color: var(--title-color);
+  cursor: pointer;
+  transition: color .3s;
+}
 
 /*========== Variables Dark theme ==========*/
-
+body.dark-theme{
+  --first-color: hsl(14, 80%, 50%);
+  --black-color: hsl(0, 0%, 18%);
+  --black-color-light: hsl(0, 0%, 30%);
+  --title-color: hsl(0, 0%, 95%);
+  --text-color: hsl(0, 0%, 70%);
+  --body-color: hsl(0, 0%, 8%);
+  --container-color: hsl(0, 0%, 12%);
+}
 
 /*========== 
 	Color changes in some parts of 
 	the website, in dark theme
 ==========*/
+.dark-theme .shadow-header{
+  box-shadow: 0 1px 12px hsla(0, 0%, 0%, .6);
+}
+
+.dark-theme .section__title-1::after,
+.dark-theme .section__title-2::after{
+  background-color: hsla(14, 70%, 50%, .2);
+}
+
+.dark-theme :is(.home__arrow, .home__line, .about__line){
+  filter: none;
+}
+
+.dark-theme .home__description b{
+  background: linear-gradient(90deg, 
+                            hsla(14, 80%, 50%, .3),
+                            hsla(14, 80%, 50%, 0));
+}
+
+
+
+.dark-theme :is(.button__ghost, .services__icon i){
+  color: var(--white-color);
+}
+
+.dark-theme .projects__card:hover{
+  background-color: var(--body-color);
+}
+
+.dark-theme :is(.contact__mail, .contact__input, .contact__label){
+  background-color: var(--container-color);
+}
+
+.dark-theme .footer{
+  background-color: hsl(0, 0%, 4%);
+}
+
+.dark-theme::-webkit-scrollbar{
+  background-color: hsl(0, 0%, 20%);
+}
+
+.dark-theme::-webkit-scrollbar-thumb{
+  background-color: hsl(0, 0%, 30%);
+}
+
+.dark-theme::-webkit-scrollbar-thumb:hover{
+  background-color: hsl(0, 0%, 40%);
+}
 
 
 /*=============== REUSABLE CSS CLASSES ===============*/
@@ -176,7 +244,7 @@ img {
   left: 0;
   background-color: var(--body-color);
   z-index: var(--z-fixed);
-  transition: box-shadow .4s;
+  transition: box-shadow .4s, background-color .4s;
 }
 
 .nav{
@@ -250,7 +318,7 @@ img {
   font-size: var(--h2-font-size);
 }
 
-.nav__name::after
+.nav__name::after,
 .nav__name::before{
   content: "";
   width: 40px;
@@ -319,6 +387,14 @@ img {
 }
 
 /* Active link */
+.active-link{
+  color: var(--white-color);
+}
+
+.active-link::after{
+  width: 25%;
+}
+
 
 
 /*=============== HOME ===============*/
@@ -652,7 +728,7 @@ img {
   z-index: 5;
 }
 
-.services_box{
+.services__box{
   position: absolute;
   width: 24px;
   height: 24px;
@@ -663,35 +739,618 @@ img {
 
 
 
+.services__title{
+  font-size: var(--h2-font-size);
+  margin-bottom: 1.25rem;
+}
 /*=============== PROJECTS ===============*/
+.projects{
+  background-color: var(--container-color);
+  transition: background-color .4s;
+}
+
+.projects__container{
+  row-gap: 2rem;
+}
+
+.projects__card{
+  padding: 1rem 1rem 2rem;
+  transition: background-color .4s;
+  /* background-color: var(--white-color); */
+}
+
+.projects__image{
+  position: relative;
+  margin-bottom: .75rem;
+}
+
+.projects__button{
+  position: absolute;
+  right: 1rem;
+  bottom: -1.5rem;
+  padding: 1rem;
+}
+
+.projects__content{
+  margin-bottom: 1.25rem;
+}
+
+.projects__subtitle{
+  position: relative;
+  display: inline;
+  font-size: font var(--small-font-size);
+  font-weight: var(--font-medium);
+  color: var(--text-color);
+  margin-bottom: .75rem;
+  padding-left: 1.75rem;
+}
+
+
+.projects__subtitle::after{
+  content: '';
+  width: 20px;
+  height: 1px;
+  background-color: var(--text-color);
+  position: absolute;
+  top: 50%;
+  left: 0;
+}
+
+.projects__title{
+  font-size: var(--h3-font-size);
+  margin-bottom: .75rem;
+}
+
+.projects__buttons{
+  display: flex;
+  align-items: center;
+  column-gap: 1rem;
+}
+
+.projects__link{
+  display: flex;
+  align-items: center;
+  column-gap: .25rem;
+  color: var(--text-color);
+  font-size: var(--small-font-size);
+  font-weight: var(--font-medium);
+  transition: color .4s;
+}
+
+.projects__link i{
+  font-size: 1rem;
+  color: var(--title-color);
+  transition: color .4s;
+}
+
+.projects__link:hover,
+.projects__link:hover i{
+  color: var(--first-color);
+}
+
+
+.projects__card:hover{
+  background-color: var(--white-color);
+
+}
 
 
 /*=============== CONTACT ===============*/
+.contact{
+  padding-bottom: 0;
+}
 
+.contact__container{
+  position: relative;
+  grid-template-rows: 300px max-content max-content;
+  row-gap: 0;
+}
+
+
+.contact__data{
+  position: relative;
+  width: 300px;
+  height: 300px;
+  background-color: var(--container-color);
+  padding: 3rem 1.5rem 3.5rem;
+  margin-left: auto;
+  border-bottom: 4px solid var(--first-color);
+  z-index: 5;
+  transition: background-color .4s;
+}
+
+.contact__data .section__title-2{
+  margin: 0 0 1.5rem;
+  transform: translateX(-3.5rem)
+}
+
+.contact__description-1{
+  color: var(--title-color);
+  font-weight: var(--font-medium);
+  margin-bottom: 2rem;
+}
+
+.contact__description-2{
+  color: var(--title-color);
+  font-size: var(--small-font-size);
+}
+
+.contact__data .geometric-box{
+  top: 2rem;
+  right: 2.5rem;
+}
+
+.contact__mail{
+  position: relative;
+  background-color: var(--black-color);
+  padding: 5rem 1.5rem 2.5rem;
+  margin-top: -2.5rem;
+  transition: background-color .4s;
+}
+
+.contact__title{
+  color: var(--white-color);
+  font-size: var(--h2-font-size);
+  margin-bottom: 2rem;
+  text-align: center;
+}
+
+.contact__form,
+.contact__group{
+  display: grid;
+  row-gap: 1.25rem;
+}
+
+.contact__form{
+  position: relative;
+}
+
+.contact__box{
+  position: relative;
+  width: 100%;
+  height: 58px;
+}
+
+.contact__input,
+.contact__button{
+  font-family: var(--body-font);
+  font-size: var(--normal-font-size);
+  outline: none;
+  border: none;
+}
+
+
+.contact__input{
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background-color: var(--black-color);
+  border: 3px solid var(--black-color-light);
+  color: var(--white-color);
+  padding: .5rem 1rem;
+  font-weight: var(--font-medium);
+  transition: border .4s, background-color .4s;
+}
+
+.contact__input::placeholder{
+  color: var(--text-color-light);
+  transition: opacity .4s;
+}
+
+.contact__input:focus{
+  border: 3px solid var(--white-color);
+}
+
+.contact__input:hover{
+  border: 3px solid var(--white-color)
+}
+
+
+.contact__input:-webkit-autofill{
+  transition: background-color 6000s, color 6000s;
+}
+
+.contact__label{
+  position: absolute;
+  top: 8px;
+  left: 10px;
+  color: var(--text-color-light);
+  font-size: var(--small-font-size);
+  font-weight: var(--font-medium);
+  background-color: var(--black-color);
+  padding: 8px;
+  pointer-events: none;
+  transition: top .4s, opacity .4s, background-color .4s;
+  opacity: 0;
+}
+
+.contact__form .contact__area{
+  height: 10rem;
+}
+
+.contact__area textarea{
+  resize: none;
+  padding-top: 1rem;
+}
+
+.contact__button{
+  background-color: var(--first-color);
+  cursor: pointer;
+}
 
 /* Opaque placeholder */
+.contact__input:focus::placeholder{
+  opacity: 0;
+}
 
 
 /* Move label up & sticky label */
+.contact__input:focus + .contact__label,
+.contact__input:not(:placeholder-shown).contact__input:not(:focus) + .contact__label{
+  opacity: 1;
+  top: -16px;
+}
 
 
+.contact__social{
+  display: grid;
+  row-gap: 1rem;
+  background-color: hsl(0, 0%, 10%);
+  padding-block: 1rem 2rem;
+  text-align: center;
+}
+
+.contact__social-arrow{
+  width: 32px;
+  margin: 0 auto;
+}
+
+.contact__social-data{
+  display: flex;
+  flex-direction: column;
+  row-gap: 1.5rem;
+}
+
+.contact__social-description-1{
+  color: var(--text-color-light);
+  font-size: var(--small-font-size);
+  margin-bottom: .5rem;
+}
+
+.contact__social-description-2{
+  color: var(--white-color);
+  font-size: var(--small-font-size);
+  font-weight: var(--font-semi-bold);
+}
+
+
+.contact__social-links{
+  display: flex;
+  justify-content: center;
+  column-gap: .75rem;
+}
+
+.contact__social-link{
+  background-color: var(--black-color-light);
+  padding: 6px;
+  color: var(--white-color);
+  display: grid;
+  font-size: 1.25rem;
+  place-items: center;
+  transition: background-color .3s;
+}
+
+
+.contact__social-link:hover{
+  background-color: var(--first-color);
+}
+
+
+.contact__message{
+  color: var(--white-color);
+  font-size: var(--small-font-size);
+  position: absolute;
+  bottom: -1.6rem;
+  left: 0;
+}
 /*=============== FOOTER ===============*/
+.footer{
+  background-color: var(--black-color);
+}
+
+.footer__container{
+  padding-block: 3rem 2rem;
+  row-gap: 2.5rem;
+}
+
+.footer__links{
+  display: flex;
+  justify-content: center;
+  column-gap: 2rem;
+}
+
+.footer__link{
+  color: var(--white-color);
+  transition: color .4s;
+}
+
+.footer__link:hover{
+  color: var(--text-color-light);
+}
+
+.footer__copy{
+  color: var(--text-color-light);
+  font-size: var(--small-font-size);
+  text-align: center;
+}
+
+.footer__copy a{
+  color: var(--white-color);
+  font-weight: var(--font-medium);
+}
+
+
+
 
 
 /*=============== SCROLL BAR ===============*/
+::-webkit-scrollbar{
+  width: .6rem;
+  border-radius: .5rem;
+  background-color: hsl(0, 0%, 65%);
+}
+
+::-webkit-scrollbar-thumb{
+  border-radius: .5rem;
+  background-color: hsl(0, 0%, 55%) ;
+}
+
+
+::-webkit-scrollbar-thumb:hover{
+  border-radius: .5rem;
+  background-color: hsl(0, 0%, 45%);
+}
+
 
 
 /*=============== SCROLL UP ===============*/
+.scrollup{
+  position: fixed;
+  right: 1rem;
+  bottom: -50%;
+  background-color: var(--black-color);
+  display: inline-flex;
+  padding: 8px;
+  font-size: 1.25rem;
+  color: var(--white-color);
+  z-index: var(--z-tooltip);
+  transition: bottom .4s, transform .4s, background-color .4s;
+}
+
+.scrollup:hover{
+  transform: translateY(-.5rem);
+}
 
 
 /* Show Scroll Up */
-
+.show-scroll{
+  bottom: 3rem;
+}
 
 /*=============== BREAKPOINTS ===============*/
 /* For small devices */
+@media screen and (max-width: 340px){
+  .container{
+    margin-inline: 1rem;
+  }
 
+  .home__image{
+    width: 180ox;
+  }
+
+  .about__image{
+    width: 180px;
+  }
+
+  .about__shadow{
+    height: 330px;
+    right: -2.5rem;
+  }
+
+  .contact__data{
+    width: 100%;
+  }
+
+  .contact__data .section__title-2{
+    transform: translateX(0);
+  }
+}
 
 /* For medium devices */
+@media screen and (min-width: 576px){
+  .home__container,
+  .about__container,
+  .projects__container{
+    grid-template-columns: 350px;
+    justify-content: center;
+  }
+
+  .contact__data{
+    width: 350px;
+    padding: 4rem 1.5rem;
+    margin-inline: auto;
+  }
+
+  .contact__container{
+    grid-template-columns: 500px;
+    justify-content: center;
+  }
+
+  .contact__group{
+    /* grid-template-columns: repeat(2, 1fr); */
+    grid-template-columns: repeat(2, 1fr);
+    column-gap: 1rem;
+  }
+
+  .contact__social-arrow{
+    filter: invert(1);
+  }
+
+  .contact__social-description-1{
+    color: var(--text-color);
+  }
+
+  .contact__social-description-2{
+    color: var(--title-color);
+  }
+
+  .dark-theme .contact__social-arrow{
+    filter: none;
+  }
+}
 
 
+@media screen and (min-width: 768px){
+  .services__container{
+    grid-template-columns: repeat(2, 250px);
+  }
+
+  .projects__container{
+    grid-template-columns: repeat(2, 350px);
+  }
+}
 /* For large devices */
+
+@media screen and (min-width: 1150px) {
+  .container{
+    margin-inline: auto;
+  }
+
+  .section{
+    padding-block: 7rem 2rem;
+  }
+
+  .section__title-1::after,
+  .section__title-2::after{
+    width: 70px;
+    height: 48px;
+  }
+
+  .geometric-box{
+    transform: scale(1.2);
+  }
+
+  .nav{
+    height: calc(var(--header-height) + 2rem);
+    column-gap: 4rem;
+  }
+
+  .nav__close,
+  .nav__toggle,
+  .nav__title,
+  .nav__name{
+    display: none;
+  }
+
+  .nav__list{
+    flex-direction: row;
+    column-gap: 4rem;
+  }
+
+  .nav__menu{
+    margin-left: auto;
+  }
+
+  .nav__link{
+    color: var(--text-color);
+    font-size: var(--normal-font-size);
+  }
+
+  .nav__link:hover{
+    color: var(--title-color);
+  }
+
+  .nav__link::after{
+    background-color: var(--title-color);
+  }
+
+  .active-link{
+    color: var(--title-color);
+  }
+
+  .nav__link-button{
+    background-color: var(--black-color);
+    color: var(--white-color);
+    padding: 1.1rem 1.5rem;
+  }
+
+  .nav__link-button:hover{
+    color: var(--white-color);
+  }
+
+  .nav__link-button::after{
+    background-color: transparent;
+  }
+
+  .change-theme{
+    color: var(--text-color);
+  }
+
+  .change-theme:hover{
+    color: var(--title-color);
+  }
+
+  .home__container{
+    grid-template-columns: repeat(2, 460px);
+    gap: 2rem 4rem;
+    align-items: center;
+    padding-block: 5.5rem;
+  }
+
+  .home__perfil{
+    grid-column: 2/3;
+    grid-row: 1/3;
+  }
+
+  .home__image{
+    width: 350px;
+  }
+
+  .home__shadow{
+    right: -1.25rem;
+    bottom: -1.25rem;
+    border: 6px solid var(--black-color);
+  }
+
+  .home__name,
+  .home__description{
+    text-align: initial;
+  }
+
+  .home__name{
+    align-self: flex-end;
+  }
+
+  .home__info{
+    margin-top: 0;
+    align-self: flex-start;
+  }
+
+  .home__description{
+    position: relative;
+    font-size: var(--h2-font-size);
+    margin-bottom: 5.5rem;
+    padding-left: 3rem;
+  }
+
+  .home__description::after{
+    content: '';
+    width: 32px;
+    height: 2px;
+    background-color: var(--title-color);
+    position: absolute;
+    left: 0;
+    top: 14px;
+  }
+
+}
